# tiny_dog_MicroController

./: CMakeLists.txt  README.md  main.cpp  main.h
controllers/: PCA9685.cpp  extensionController.cpp  i2cInterface.cpp  spiInterface.cpp  spiModule.cpp
inputs/: adcInputs.cpp
modules/: PCA9685.cpp  TriangleTracker.cpp  communicationTracker.cpp  extensionTracker.cpp  positionTrack.cpp  utilityClasses.cpp
utilities/: types.cpp  utilityClasses.cpp  utilityFunctions.cpp
